--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,11 +2,12 @@
 	"python.testing.unittestArgs": [
 		"-v",
 		"-s",
-		"./Test",
+		".",
 		"-p",
 		"test*.py"
 	],
 	"python.testing.pytestEnabled": false,
 	"python.testing.nosetestsEnabled": false,
-	"python.testing.unittestEnabled": true
+	"python.testing.unittestEnabled": true,
+	"python.pythonPath": "C:\\Users\\smsgl\\AppData\\Local\\Programs\\Python\\Python39\\python.exe"
 }
